fix(styling): project title clipping

--- a/styles/components/_project.scss
+++ b/styles/components/_project.scss
@@ -25,6 +25,9 @@
 				transform: scale(1.2);
 			}
 		}
+		h2 {
+			margin-right: rem(1);
+		}
 		.image-container {
 			width: 0%;
 			height: rem(5);
